[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/uno_logo_small.png" type="Texture" id=1]
[ext_resource path="res://assets/FIGHTT__.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Name.gd" type="Script" id=3]
[ext_resource path="res://assets/arrow_right.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 35
font_data = ExtResource( 2 )

[node name="ColorRect" type="ColorRect"]
margin_right = 800.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -70.0
margin_bottom = -30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 700.0
margin_bottom = 540.0

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 300.0
margin_bottom = 540.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_right = 300.0
margin_bottom = 491.0
size_flags_vertical = 3
texture = ExtResource( 1 )

[node name="StatusLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 495.0
margin_right = 300.0
margin_bottom = 540.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Server Unavailable"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 304.0
margin_top = 102.0
margin_right = 700.0
margin_bottom = 437.0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_constants/separation = 30

[node name="Spacer" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 396.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 130.0
margin_right = 396.0
margin_bottom = 175.0
custom_fonts/font = SubResource( 2 )
text = "Please enter a nickname:"

[node name="LineEdit" type="LineEdit" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 205.0
margin_right = 396.0
margin_bottom = 260.0
custom_fonts/font = SubResource( 3 )
custom_colors/selection_color = Color( 0, 0, 0, 0 )
custom_colors/cursor_color = Color( 0, 0, 0, 0 )
clear_button_enabled = true

[node name="TextureButton" type="TextureButton" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_left = 340.0
margin_top = 290.0
margin_right = 396.0
margin_bottom = 335.0
focus_mode = 0
size_flags_horizontal = 8
enabled_focus_mode = 0
texture_normal = ExtResource( 4 )
[connection signal="text_entered" from="MarginContainer/HBoxContainer/VBoxContainer/LineEdit" to="." method="textEntered"]
[connection signal="button_down" from="MarginContainer/HBoxContainer/VBoxContainer/TextureButton" to="." method="buttonPressed"]
